// Copyright 2024 MaidSafe.net limited.
//
// This SAFE Network Software is licensed to you under The General Public License (GPL), version 3.
// Unless required by applicable law or agreed to in writing, the SAFE Network Software distributed
// under the GPL Licence is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied. Please review the Licences for the specific language governing
// permissions and limitations relating to use of the SAFE Network Software.

// Version of protocol buffer used
syntax = "proto3";

// Package name
package antctl_proto;

message NodeServiceRestartRequest {
    bytes peer_id = 1;
    bool retain_peer_id = 2;
    uint64 delay_millis = 3;
}
  
message NodeServiceRestartResponse {}

message GetStatusRequest {}

message GetStatusResponse {
    enum ServiceStatus {
        Added = 0;
        Running = 1;
        Stopped = 2;
        Removed = 3;
    }
    message Node {
        optional bytes peer_id = 1;
        ServiceStatus status = 2;
        uint32 number = 3;
    }

    repeated Node nodes = 1;

}
